bid tile header overflow fix

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -338,6 +338,7 @@ ul.context-menu
       color: #fff799
       margin: 0 0 5px 0
       padding: 0
+      
     .collaborators
       margin: 0 0 10px 0
       
@@ -1187,6 +1188,8 @@ form.post-a-job
         opacity: .7
     .stripe
       background: #607965
+      height: 32px
+      overflow: hidden
     .photo
       width: 192px
       height: 144px
